--- a/index.html
+++ b/index.html
@@ -44,16 +44,15 @@
                 <li class="nav-item">
                     <a class="nav-link text-white font-weight-bold" href="#testimonials">Testimonials</a>
                 </li>
- 
             </ul>
         </div>
     </nav>
 
-    <header class="bg-black text-light text-center py-5" style="font-weight: 700; font-size: 30px; line-height: 60px;">
-        <h1>Welcome to Strategy Share</h1>
+    <header class="bg-black text-light text-center py-5" style="font-weight: 700;">
+        <h1 style="font-size: 2.5rem;">Welcome to Strategy Share</h1>
         <p>Your platform to share and learn from interview experiences.</p>
         <a href="http://strategy-share.infinityfreeapp.com/index.php" class="btn btn-primary btn-lg">Get Started</a>
-        <img src="img.png" alt="Strategy Share Interface" class="img-fluid rounded mx-auto d-block mt-2" style="max-width: 1200px;">
+        <img src="img.png" alt="Strategy Share Interface" class="img-fluid rounded mx-auto d-block mt-2" style="max-width: 80%; height: auto;">
     </header>
     
 
@@ -65,7 +64,7 @@
 
         <section id="features" class="mb-5">
             <h2>Why Share Your Experience?</h2>
-            <ul>
+            <ul class="list-unstyled">
                 <li>Build a supportive community.</li>
                 <li>Help others prepare better for interviews.</li>
                 <li>Gain insights into various interview processes.</li>
@@ -84,7 +83,7 @@
 
         <section id="upcoming-features" class="mb-5">
             <h2>Upcoming Features</h2>
-            <ul>
+            <ul class="list-unstyled">
                 <li>Roadmaps for interview preparation.</li>
                 <li>Job and internship postings to help you find opportunities.</li>
                 <li>Connect with people via email, LinkedIn, and other platforms.</li>
@@ -103,23 +102,23 @@
             </blockquote>
             <blockquote class="blockquote">
                 <p class="mb-0">"Reading others' experiences gave me the confidence I needed going into my interviews. I can't recommend this platform enough!"</p>
-                <footer class="blockquote-footer">Aarav Jain , Data Analyst Neosoft Tech</footer>
+                <footer class="blockquote-footer">Aarav Jain, Data Analyst Neosoft Tech</footer>
             </blockquote>
             <blockquote class="blockquote">
                 <p class="mb-0">"I shared my own experience and received great feedback from the community. It felt good to help others while also learning!"</p>
-                <footer class="blockquote-footer">Ved Tikekar , Systems Engineer TCS</footer>
+                <footer class="blockquote-footer">Ved Tikekar, Systems Engineer TCS</footer>
             </blockquote>
             <blockquote class="blockquote">
                 <p class="mb-0">"Strategy Share has become my go-to resource for interview preparation. The shared stories are incredibly valuable!"</p>
-                <footer class="blockquote-footer">Yash Sharma , SDE T4 Tech</footer>
+                <footer class="blockquote-footer">Yash Sharma, SDE T4 Tech</footer>
             </blockquote>
         </section>
     </main>
 
-    <footer class="text-center py-4">
+    <footer class="text-center py-4 text-light">
         <p>&copy; 2024 Strategy Share</p>
-        <p>Build with Love from Pratham <a href="https://www.linkedin.com/in/pratham-chavan5685/">LinkedIn</a></p>
-        <p> Email at pratham5685@gmail.com</p>
+        <p>Built with love from Pratham <a href="https://www.linkedin.com/in/pratham-chavan5685/" class="text-light">LinkedIn</a></p>
+        <p>Email at <a href="mailto:pratham5685@gmail.com" class="text-light">pratham5685@gmail.com</a></p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
