--- a/index.html
+++ b/index.html
@@ -6,17 +6,40 @@
     <title>Strategy Share - Interview Experience Sharing</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css"> <!-- Your custom styles -->
     <style>
         body {
             font-family: 'Inter', sans-serif;
-            color: #ffffff; /* Change text color to white */
-            background-color: #000000; /* Set background color to black */
+            color: #ffffff;
+            background-color: #000000;
             font-size: 18px;
             line-height: 24px;
         }
         a {
-            color: #0d6efd; /* Set link color to a standard blue */
+            color: #0d6efd;
+        }
+        .navbar-toggler {
+            border-color: white; 
+        }
+        .navbar-toggler-icon {
+            background-color: white; 
+        }
+        header {
+            padding: 60px 15px; /* Responsive padding */
+        }
+        img {
+            max-width: 100%; /* Responsive image */
+            height: auto; /* Maintain aspect ratio */
+        }
+        @media (max-width: 768px) {
+            header {
+                padding: 40px 15px;
+            }
+            h1 {
+                font-size: 24px; /* Smaller font size for smaller screens */
+            }
+            p {
+                font-size: 16px; /* Smaller paragraph font size */
+            }
         }
     </style>
 </head>
@@ -48,14 +71,14 @@
         </div>
     </nav>
 
-    <header class="bg-black text-light text-center py-5" style="font-weight: 700;">
-        <h1 style="font-size: 2.5rem;">Welcome to Strategy Share</h1>
+    <header class="bg-black text-light text-center">
+        <h1>Welcome to Strategy Share</h1>
         <p>Your platform to share and learn from interview experiences.</p>
+        <p class="font-weight-bold">Currently featuring 100+ interview experiences and 150+ members!</p>
         <a href="http://strategy-share.infinityfreeapp.com/index.php" class="btn btn-primary btn-lg">Get Started</a>
-        <img src="img.png" alt="Strategy Share Interface" class="img-fluid rounded mx-auto d-block mt-2" style="max-width: 80%; height: auto;">
+        <img src="img.png" alt="Strategy Share Interface" class="img-fluid rounded mx-auto d-block mt-2" style="max-width: 80%;">
     </header>
     
-
     <main class="container mt-5">
         <section id="about" class="mb-5">
             <h2>What is Strategy Share?</h2>
@@ -64,7 +87,7 @@
 
         <section id="features" class="mb-5">
             <h2>Why Share Your Experience?</h2>
-            <ul class="list-unstyled">
+            <ul>
                 <li>Build a supportive community.</li>
                 <li>Help others prepare better for interviews.</li>
                 <li>Gain insights into various interview processes.</li>
@@ -83,7 +106,7 @@
 
         <section id="upcoming-features" class="mb-5">
             <h2>Upcoming Features</h2>
-            <ul class="list-unstyled">
+            <ul>
                 <li>Roadmaps for interview preparation.</li>
                 <li>Job and internship postings to help you find opportunities.</li>
                 <li>Connect with people via email, LinkedIn, and other platforms.</li>
@@ -97,33 +120,32 @@
                 <footer class="blockquote-footer">Dipen Rodda, Software Engineer Capgemini</footer>
             </blockquote>
             <blockquote class="blockquote">
-                <p class="mb-0">"I found practical tips that helped me tackle tough interview questions. This community is a game changer!"</p>
+                <p class="mb-0">"I found practical tips that helped me tackle coding interview questions. This community is a game changer!"</p>
                 <footer class="blockquote-footer">Akhil Vijayan, GET Godrej & Boyce</footer>
             </blockquote>
             <blockquote class="blockquote">
                 <p class="mb-0">"Reading others' experiences gave me the confidence I needed going into my interviews. I can't recommend this platform enough!"</p>
-                <footer class="blockquote-footer">Aarav Jain, Data Analyst Neosoft Tech</footer>
+                <footer class="blockquote-footer">Purvi Jain, Data Analyst Neosoft Tech</footer>
             </blockquote>
             <blockquote class="blockquote">
-                <p class="mb-0">"I shared my own experience and received great feedback from the community. It felt good to help others while also learning!"</p>
+                <p class="mb-0">"I shared my own experience and it felt good to help others while also learning!"</p>
                 <footer class="blockquote-footer">Ved Tikekar, Systems Engineer TCS</footer>
             </blockquote>
             <blockquote class="blockquote">
                 <p class="mb-0">"Strategy Share has become my go-to resource for interview preparation. The shared stories are incredibly valuable!"</p>
-                <footer class="blockquote-footer">Yash Sharma, SDE T4 Tech</footer>
+                <footer class="blockquote-footer">Tanishka Sharma, SDE T4 Tech</footer>
             </blockquote>
         </section>
     </main>
 
-    <footer class="text-center py-4 text-light">
+    <footer class="text-center py-4">
         <p>&copy; 2024 Strategy Share</p>
-        <p>Built with love from Pratham <a href="https://www.linkedin.com/in/pratham-chavan5685/" class="text-light">LinkedIn</a></p>
-        <p>Email at <a href="mailto:pratham5685@gmail.com" class="text-light">pratham5685@gmail.com</a></p>
+        <p>Built with Love from Pratham <a href="https://www.linkedin.com/in/pratham-chavan5685/">LinkedIn</a></p>
+        <p>Email at pratham5685@gmail.com</p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="script.js"></script> <!-- Your custom script -->
 </body>
 </html>
